[gd_scene load_steps=6 format=2]

[ext_resource path="res://demo/src/blob/Blob.gd" type="Script" id=1]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 0.5

[sub_resource type="Animation" id=2]
resource_name = "heal"
length = 0.35
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("FlashPolygon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.35 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlashPolygon:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.15, 0.35 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1.25, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shape3D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 0.15, 0.23, 0.3, 0.35 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shape3D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PackedFloat32Array( 0, 0.35 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hit-flash"
length = 0.35
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("FlashPolygon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.35 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlashPolygon:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.15, 0.35 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1.25, 1.25, 1.25, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shape3D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 0.15, 0.23, 0.3, 0.35 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shape3D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PackedFloat32Array( 0, 0.35 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "invincible-hit-flash"
length = 0.35
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("FlashPolygon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.35 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlashPolygon:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.15, 0.35 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.635294, 0.635294, 1 ), Color( 0.862745, 0.454902, 0.454902, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shape3D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 0.15, 0.23, 0.3, 0.35 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.5, 0.5 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shape3D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PackedFloat32Array( 0, 0.35 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Blob" type="RigidBody2D"]
collision_layer = 512
collision_mask = 513
mode = 2
mass = 10.0
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
max_contacts_reported = 12
contact_monitor = true
can_sleep = false
linear_damp = 2.0
script = ExtResource( 1 )
target_pos_interval_range = Vector2( 3, 5 )
keep_distance_range = Vector2( 350, 500 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="DropPoly" type="Polygon2D" parent="."]
scale = Vector2( 1.5, 1.5 )
color = Color( 1, 1, 1, 0.392157 )

[node name="OriginPoly" type="Polygon2D" parent="."]
scale = Vector2( 1.05, 1.05 )
color = Color( 0.394531, 0.394531, 0.394531, 0.588235 )

[node name="Shape3D" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="Shape3D"]
color = Color( 0.772549, 0.772549, 0.772549, 1 )

[node name="Line2D" type="Line2D" parent="Shape3D"]
width = 4.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="FlashPolygon" type="Polygon2D" parent="."]
scale = Vector2( 1.1, 1.1 )
color = Color( 1, 0.635294, 0.635294, 1 )

[node name="TargetPosTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/heal = SubResource( 2 )
anims/hit-flash = SubResource( 3 )
anims/invincible-hit-flash = SubResource( 4 )

[node name="InvincibleTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="TargetPosTimer" to="." method="_on_TargetPosTimer_timeout"]
